[package]
name = "voronota"
version = "0.2.0"
edition = "2021"
description = "Voronota-LT is an alternative version of Voronota for constructing tessellation-derived atomic contact areas and volumes."
license = "MIT"
readme = "README.md"
categories = ["science"]
homepage = "https://www.voronota.com/expansion_lt"
repository = "https://github.com/mlund/voronota-rs"
authors = ["Kliment Olechnovic <kliment.olechnovic@bti.vu.lt>", "Mikael Lund <lyssky@icloud.com>"]
keywords = ["voronoi-tessellation", "surface-area", "molecules"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[dev-dependencies]
approx = "0.5"

[build-dependencies]
cxx-build = "1.0"
